Add dockerfile MU-5

--- a/src/pom.xml
+++ b/src/pom.xml
@@ -12,7 +12,7 @@
 
     <groupId>com.hcmus.mentor</groupId>
     <artifactId>backend</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <packaging>jar</packaging>
 
     <name>mentor-backend</name>
@@ -21,7 +21,7 @@
 
     <properties>
 
-        <java.version>8</java.version>
+        <java.version>17</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
