--- a/src/src/main/resources/application-dev.yml
+++ b/src/src/main/resources/application-dev.yml
@@ -33,14 +33,14 @@ spring:
     mongodb:
       user: root
       password: password
-      uri: mongodb://root:Lamgicopass#1234@172.17.0.1:27017/mentordb?authSource=admin
+      uri: mongodb://root:Lamgicopass1234@172.17.0.1:27017/mentordb?authSource=admin
   security:
     oauth2:
       client:
         registration:
           google:
-            clientId: 5014057553-8gm9um6vnli3cle5rgigcdjpdrid14m9.apps.googleusercontent.com
-            clientSecret: tWZKVLxaD_ARWsriiiUFYoIk
+            clientId: 856018113300-ttu1tcagqq87039njp3ljaa1u9djockp.apps.googleusercontent.com
+            clientSecret: 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
             redirectUri: "{baseUrl}/oauth2/callback/{registrationId}"
             scope:
               - openid
@@ -88,8 +88,7 @@ app:
     authorizedRedirectUris:
       - http://localhost:3000/oauth2/redirect
       - http://localhost:8080/
-      - http://157.245.155.114:7002/oauth2/redirect
       - mentorus://oauth2/redirect
-      - https://mentor.fit.hcmus.edu.vn/auth/redirect
+      - https://admin-mentorus.hieucckha.me/auth/redirect
 springdoc:
   packages-to-scan: com.hcmus.mentor.backend.controller
