--- a/src/src/main/resources/application.yml
+++ b/src/src/main/resources/application.yml
@@ -40,31 +40,28 @@ spring:
       client:
         registration:
           google:
-            clientId: 856018113300-orcmshnug3k11v61an2d782uta6etmd5.apps.googleusercontent.com
-            clientSecret: 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
-            redirectUri: "{baseUrl}/oauth2/callback/{registrationId}"
+            client-id: 856018113300-orcmshnug3k11v61an2d782uta6etmd5.apps.googleusercontent.com
+            client-secret: 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
+            redirect-uri: "{baseUrl}/oauth2/callback/{registrationId}"
             scope:
               - openid
               - email
               - profile
           azure:
-            clientId: d1aa2e7d-f499-49eb-890a-4ced56bd35a5
-            clientSecret: ZLS8Q~ldy20YOD6phW__ZjMqw93IC9wZjWQK6b43
-            redirectUri: "{baseUrl}/oauth2/callback/{registrationId}"
-            authorizationGrantType: authorization_code
+            client-id: 8aad3f74-3cb6-45a8-99ed-583f684ea6bf
+            client-secret: Mwo8Q~0EMFXprk7rFLVWK3dDFpMK3-.guexigcS4
+            redirect-uri: "{baseUrl}/oauth2/callback/{registrationId}"
             scope:
               - openid
+              - email
               - profile
         provider:
-          azure:
-            authorizationUri: https://login.microsoftonline.com/40127cd4-45f3-49a3-b05d-315a43a9f033/oauth2/v2.0/authorize?prompt=select_account
-            tokenUri: https://login.microsoftonline.com/40127cd4-45f3-49a3-b05d-315a43a9f033/oauth2/v2.0/token
-            userInfoUri: https://graph.microsoft.com/oidc/userinfo
-            jwk-set-uri: https://login.microsoftonline.com/40127cd4-45f3-49a3-b05d-315a43a9f033/discovery/v2.0/keys
-            userNameAttribute: name
-            userInfoAuthenticationMethod: header
           google:
             authorization-uri: https://accounts.google.com/o/oauth2/v2/auth?prompt=select_account
+          azure:
+            authorization-uri: https://login.microsoftonline.com/75b895ea-7ab4-4a2e-9d03-624765bf3801/oauth2/v2.0/authorize
+            token-uri: https://login.microsoftonline.com/75b895ea-7ab4-4a2e-9d03-624765bf3801/oauth2/v2.0/token
+            issuer-uri: https://login.microsoftonline.com/75b895ea-7ab4-4a2e-9d03-624765bf3801/v2.0
 
 azure:
   active-directory:
