--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -5,9 +5,9 @@ on:
     branches:
       - main
       - develop
-      - feature/MU-22-setup-cicd-backend
-    # paths:
-    #   - src
+    paths:
+      - src
+      - .github/workflows
 
   workflow_dispatch:
 
