--- a/src/src/main/resources/application-prod.yml
+++ b/src/src/main/resources/application-prod.yml
@@ -4,7 +4,7 @@ server-socket:
 
 server:
   tomcat:
-    relaxed-query-chars: [ '{','}' ]
+    relaxed-query-chars: [ "{", "}" ]
 
 spring:
   servlet:
@@ -30,37 +30,35 @@ spring:
     mongodb:
       user: root
       password: password
-      uri: mongodb://root:password@localhost:27017/mentordb?authSource=admin
+      uri: mongodb://root:password@172.17.0.1:27017/mentordb?authSource=admin
   security:
     oauth2:
       client:
         registration:
           google:
-            clientId: 756803676230-gfcd1ere7426l1sr3soh7t4mvjom2n04.apps.googleusercontent.com
-            clientSecret: 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
+            clientId: 856018113300-9du0njid2kjj16793lb6ftiiitln4td5.apps.googleusercontent.com
+            clientSecret: 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
             redirectUri: "https://mentor.fit.hcmus.edu.vn/oauth2/callback/{registrationId}"
             scope:
               - openid
               - email
               - profile
           azure:
-            clientId: bb2c035d-6cee-4b4c-a66f-46747f900942
-            clientSecret: Ryh8Q~lEe-WMpY~W3ntYTt1lnEOqVTD_P5Z0XdiZ
+            clientId: ad9918b8-455a-4277-98cd-285a0b391b8f
+            clientSecret: t_W8Q~h8XV2lAbpbfGpIT5Z7UTJ.44fRJm2xfaPJ
             redirectUri: "https://mentor.fit.hcmus.edu.vn/oauth2/callback/{registrationId}"
             authorizationGrantType: authorization_code
             scope:
               - openid
+              - email
               - profile
         provider:
-          azure:
-            authorizationUri: https://login.microsoftonline.com/common/oauth2/v2.0/authorize?prompt=select_account
-            tokenUri: https://login.microsoftonline.com/common/oauth2/v2.0/token
-            userInfoUri: https://graph.microsoft.com/oidc/userinfo
-            jwk-set-uri: https://login.microsoftonline.com/common/discovery/v2.0/keys
-            userNameAttribute: name
-            userInfoAuthenticationMethod: header
           google:
             authorization-uri: https://accounts.google.com/o/oauth2/v2/auth?prompt=select_account
+          azure:
+            authorization-uri: https://login.microsoftonline.com/75b895ea-7ab4-4a2e-9d03-624765bf3801/oauth2/v2.0/authorize
+            token-uri: https://login.microsoftonline.com/75b895ea-7ab4-4a2e-9d03-624765bf3801/oauth2/v2.0/token
+            issuer-uri: https://login.microsoftonline.com/75b895ea-7ab4-4a2e-9d03-624765bf3801/v2.0
 
 azure:
   active-directory:
