--- a/src/src/main/resources/application.yml
+++ b/src/src/main/resources/application.yml
@@ -32,8 +32,6 @@ spring:
             trust: smtp.gmail.com
   data:
     mongodb:
-      user: root
-      password: password
       uri: mongodb://root:password@localhost:27017/mentordb?authSource=admin
   security:
     oauth2:
@@ -43,25 +41,20 @@ spring:
             client-id: 856018113300-orcmshnug3k11v61an2d782uta6etmd5.apps.googleusercontent.com
             client-secret: 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
             redirect-uri: "{baseUrl}/oauth2/callback/{registrationId}"
-            scope:
-              - openid
-              - email
-              - profile
+            scope: openid,email,profile
           azure:
             client-id: 8aad3f74-3cb6-45a8-99ed-583f684ea6bf
             client-secret: Mwo8Q~0EMFXprk7rFLVWK3dDFpMK3-.guexigcS4
             redirect-uri: "{baseUrl}/oauth2/callback/{registrationId}"
-            scope:
-              - openid
-              - email
-              - profile
+            authorization-grant-type: authorization_code
+            scope: openid,email,profile
         provider:
           google:
             authorization-uri: https://accounts.google.com/o/oauth2/v2/auth?prompt=select_account
           azure:
-            authorization-uri: https://login.microsoftonline.com/75b895ea-7ab4-4a2e-9d03-624765bf3801/oauth2/v2.0/authorize
-            token-uri: https://login.microsoftonline.com/75b895ea-7ab4-4a2e-9d03-624765bf3801/oauth2/v2.0/token
-            issuer-uri: https://login.microsoftonline.com/75b895ea-7ab4-4a2e-9d03-624765bf3801/v2.0
+            authorization-uri: https://login.microsoftonline.com/common/oauth2/v2.0/authorize
+            token-uri: https://login.microsoftonline.com/common/oauth2/v2.0/token
+            jwk-set-uri: https://login.microsoftonline.com/common/discovery/v2.0/keys
 
 azure:
   active-directory:
