--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,6 @@
 .springBeans
 .sts4-cache
 
-
 # Created by https://www.gitignore.io/api/git,java,maven,eclipse,windows
 
 ### Eclipse ###
@@ -199,3 +198,5 @@ README.html
 *.iml
 .idea
 .exercism
+
+**/application.yml
