--- a/.github/workflows/build-prod.yml
+++ b/.github/workflows/build-prod.yml
@@ -2,8 +2,11 @@ name: Build production
 
 on:
   push:
+    tags:
+      - "v*"
+  pull_request:
     branches:
-      - main
+      - "main"
 
   workflow_dispatch:
 
@@ -50,7 +53,8 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          images: |
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
       - name: Build and push to github package
         uses: docker/build-push-action@v4
