--- a/src/pom.xml
+++ b/src/pom.xml
@@ -25,6 +25,10 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
+        <!-- Sonarcloud -->
+        <sonar.organization>mentorus</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+
         <!-- Dependency package version-->
         <jjwt.version>0.11.5</jjwt.version>
 
@@ -52,7 +56,6 @@
         <minio.version>8.5.6</minio.version>
 
         <aws.sdk.version>2.20.45</aws.sdk.version>
-
     </properties>
 
     <dependencies>
