--- a/src/pom.xml
+++ b/src/pom.xml
@@ -18,10 +18,9 @@
     <name>mentor-backend</name>
     <description>Demo project for Spring Boot</description>
 
-
     <properties>
 
-        <java.version>17</java.version>
+        <java.version>21</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
@@ -232,8 +231,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>${lombok.version}</version>
-            <scope>provided</scope>
+            <optional>true</optional>
         </dependency>
         <!-- End lombok -->
 
