--- a/src/src/main/resources/application.yml
+++ b/src/src/main/resources/application.yml
@@ -1,10 +1,16 @@
 ---
-spring.profiles: local
-spring.profiles.include: common, local
+spring:
+  profiles:
+    active: local
+    include: common, local
 ---
-spring.profiles: dev
-spring.profiles.include: common, dev
+spring:
+  profiles:
+    active: dev
+    include: common, dev
 ---
-spring.profiles: prod
-spring.profiles.include: common, prod
+spring:
+  profiles:
+    active: prod
+    include: common, prod
 ---
