--- a/.github/workflows/build-deploy-dev.yml
+++ b/.github/workflows/build-deploy-dev.yml
@@ -1,4 +1,4 @@
-name: Build and deploy development
+name: deploy-dev
 
 on:
   push:
@@ -55,11 +55,11 @@ jobs:
       - name: Rename jar file to app.jar
         run: mv "target/${{ github.event.repository.name }}-$(mvn help:evaluate -Dexpression=project.version -q -DforceStdout).jar" "target/app.jar"
 
-      - name: Upload app.jar to github
-        uses: actions/upload-artifact@v3
-        with:
-          name: app.jar
-          path: src/target/app.jar
+      # - name: Upload app.jar to github
+      #   uses: actions/upload-artifact@v3
+      #   with:
+      #     name: app.jar
+      #     path: src/target/app.jar
 
       - name: Login to github package
         uses: docker/login-action@v3
@@ -129,7 +129,7 @@ jobs:
               --restart always \
               --name ${{ env.CONTAINER_NAME }} \
               --add-host host.docker.internal:host-gateway \
+              -e SPRING_PROFILES_ACTIVE=dev \
               -p 7000:8080 \
               -p 7001:8085 \
-              -e "SPRING_PROFILES_ACTIVE=dev"
               ${{ env.REGISTRY }}/${{ github.repository }}/dev:latest
