--- a/src/src/main/resources/application-common.yml.template
+++ b/src/src/main/resources/application-common.yml.template
@@ -13,6 +13,10 @@ springdoc:
     tags-sorter: alpha
   show-actuator: true
 
+app:
+  name: "^project.name^"
+  version: "^project.version^"
+
 spring:
   mvc:
     pathmatch:
