--- a/src/src/main/resources/application-local.yml.template
+++ b/src/src/main/resources/application-local.yml.template
@@ -14,6 +14,7 @@ s3-settings:
 app:
   frontendUrl: "op://mentorus/backend-local/app/frontendUrl"
   jwt:
+    issuer: "op://mentorus/backend-local/jwt/issuer"
     secret-key: "op://mentorus/backend-local/jwt/secret-key"
   cors:
     allowedOrigins: http://localhost:3000,http://localhost:8080
