--- a/.github/workflows/build-prod.yml
+++ b/.github/workflows/build-prod.yml
@@ -17,6 +17,7 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
+    environment: production
     defaults:
       run:
         working-directory: ./src
