Add config for proxy spring boot

--- a/src/src/main/resources/application-common.yml.template
+++ b/src/src/main/resources/application-common.yml.template
@@ -5,6 +5,7 @@ server-socket:
 server:
   tomcat:
     relaxed-query-chars: [ "{", "}" ]
+    redirect-context-root: false
   forward-headers-strategy: framework
 
 springdoc:
