--- a/src/src/main/resources/application-dev.yml.template
+++ b/src/src/main/resources/application-dev.yml.template
@@ -50,7 +50,7 @@ spring:
             redirect-uri: "{baseUrl}/oauth2/callback/{registrationId}"
             scope: openid, name, email
             authorization-grant-type: authorization_code
-            client-authentication-method: post
+            client-authentication-method: client_secret_post
         provider:
           google:
             authorization-uri: https://accounts.google.com/o/oauth2/v2/auth?prompt=select_account
